--- a/ctf-entry/public/hidden_nat.html
+++ b/ctf-entry/public/hidden_nat.html
@@ -5,4 +5,4 @@ You'll get a key string if success.<br />
 
 I Say Nothing Here.<br />
 Don't believe me? Check by yourself. <br />
-<!-- http://localhost:3001/dA_4n5errr.txt -->
+<!-- http :3001/dA_4n5errr.txt -->
