--- a/ctf-entry/public/login_bypass_1.html
+++ b/ctf-entry/public/login_bypass_1.html
@@ -1,3 +1,3 @@
-Target: <a href="http://167.99.71.81/exam-web/login_bypass_1.php">Login Bypass 1</a><br />
+Target: <a href="http://ctf.bluet.org:20007/login_bypass_1.php">Login Bypass 1</a><br />
 This is a login page. Please try to get into the system.<br />
 You'll get a key string if success.<br />
