--- a/ctf-entry/public/network.html
+++ b/ctf-entry/public/network.html
@@ -1,3 +1,5 @@
+<h3>Work in progress. Not finished yet.</h3>
+
 Public or hidden services.<br />
 Can you find the key?<br />
 You'll get a key string if success.<br />
