--- a/ctf-entry/public/ping.html
+++ b/ctf-entry/public/ping.html
@@ -1,4 +1,4 @@
-Target: <a href="http://206.189.86.137/ping.php">Network Test Util with Ping</a><br />
+Target: <a href="http://ctf.bluet.org:20004/ping.php">Network Test Util with Ping</a><br />
 A handy network connectivity testing tool you can find on many home AP and routers.<br />
 Can you find the key?<br />
 You'll get a key string if success.<br />
