--- a/ctf-entry/public/bbs_become_admin.html
+++ b/ctf-entry/public/bbs_become_admin.html
@@ -1,4 +1,4 @@
-Target: <a href="http://167.99.71.81/exam-web/bulletin_board.php">BBS</a><br />
+Target: <a href="http://ctf.bluet.org:20001/bulletin_board.php">BBS</a><br />
 This is a Bulletin Board System.<br />
 An admin is online reading posts and refresh every few minutes.<br />
 Try to become him/her.<br />
