--- a/ctf-entry/public/login_bypass_2.html
+++ b/ctf-entry/public/login_bypass_2.html
@@ -1,3 +1,3 @@
-Target: <a href="http://167.99.71.81/exam-web/login_bypass_2.html">Login Bypass 2</a><br />
+Target: <a href="http://ctf.bluet.org:20006/login_bypass_2.html">Login Bypass 2</a><br />
 Try to become admin.<br />
 You'll get a key string if success.<br />
