--- a/brute/index.html
+++ b/brute/index.html
@@ -4,14 +4,11 @@
 	</head>
 	<body>
 		<form method="POST" action="login.php">
-			<!--username:admin-->
-		    <!--password_form(month/day) example:0903-->
+			<!--username: admin-->
+			<!--password: form month and day. example:0903-->
 			username: <input type="text" name="username"/><br>
 			password: <input type="Password" name="password"/><br>
 			<input type="submit" value="login"/>
 		</form>
 	</body>
 </html>
-
-
-
