--- a/ctf-entry/public/login_bypass_1.html
+++ b/ctf-entry/public/login_bypass_1.html
@@ -1,3 +1,3 @@
-Target: <a href="/login_bypass_1.php" onclick="javascript:event.target.port=20007" >Login Bypass 1</a><br />
+Target: <a href="/login_bypass_1.php" onclick="javascript:event.target.port=20007" target="_blank">Login Bypass 1</a><br />
 This is a login page. Please try to get into the system.<br />
 You'll get a key string if success.<br />
