--- a/ctf-entry/public/login_bypass_2.html
+++ b/ctf-entry/public/login_bypass_2.html
@@ -1,3 +1,3 @@
-Target: <a href="/login_bypass_2.html" onclick="javascript:event.target.port=20006">Login Bypass 2</a><br />
+Target: <a href="/login_bypass_2.html" onclick="javascript:event.target.port=20006" target="_blank">Login Bypass 2</a><br />
 Try to become admin.<br />
 You'll get a key string if success.<br />
