--- a/ctf-entry/public/bbs_become_admin.html
+++ b/ctf-entry/public/bbs_become_admin.html
@@ -1,4 +1,4 @@
-Target: <a href="/bulletin_board.php" onclick="javascript:event.target.port=20001">BBS</a><br />
+Target: <a href="/bulletin_board.php" onclick="javascript:event.target.port=20001" target="_blank">BBS</a><br />
 This is a Bulletin Board System.<br />
 An admin is online reading posts and refresh every few minutes.<br />
 Try to become him/her.<br />
