--- a/ctf-entry/public/sqli.html
+++ b/ctf-entry/public/sqli.html
@@ -1,2 +1,2 @@
 Do you know sqli?<br />
-<a href="/" onclick="javascript:event.target.port=20003">target</a>
+<a href="/" onclick="javascript:event.target.port=20003" target="_blank">target</a>
