--- a/ctf-entry/public/md5.html
+++ b/ctf-entry/public/md5.html
@@ -1,3 +1,3 @@
 Is md5 hash safe?<br />
-<a href="/" onclick="javascript:event.target.port=20005">target</a>
+<a href="/" onclick="javascript:event.target.port=20005" target="_blank">target</a>
 
