--- a/ctf-entry/public/header.html
+++ b/ctf-entry/public/header.html
@@ -1,3 +1,3 @@
 http header has many columns.<br />
-<a href="/" onclick="javascript:event.target.port=20009">target</a>
+<a href="/" onclick="javascript:event.target.port=20009" target="_blank">target</a>
 
