--- a/ctf-entry/public/download.html
+++ b/ctf-entry/public/download.html
@@ -1,3 +1,3 @@
 download anything you want!<br />
-<a href="/" onclick="javascript:event.target.port=20002">target</a>
+<a href="/" onclick="javascript:event.target.port=20002" target="_blank">target</a>
 
