--- a/ctf-entry/public/brute.html
+++ b/ctf-entry/public/brute.html
@@ -1,3 +1,3 @@
 admin left something in code<br />
-<a href="/" onclick="javascript:event.target.port=20000">target</a>
+<a href="/" onclick="javascript:event.target.port=20000" target="_blank">target</a>
 
